; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/src/extr_main.c_Delay.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/src/extr_main.c_Delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LocalTime = common dso_local global i64 0, align 8
@timingdelay = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Delay(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* @LocalTime, align 8
  store i64 %3, i64* @timingdelay, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load i64, i64* @LocalTime, align 8
  %6 = load i64, i64* @timingdelay, align 8
  %7 = sub nsw i64 %5, %6
  %8 = load i64, i64* %2, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %4
  br label %4

11:                                               ; preds = %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
